--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </li>
           <li>Events</li>
           <li>Finance</li>
-
+		  <li>More</li>
         </ul>
       </div>
     </div>
